tests/paczka1/small_fuzzy/71699371.err
Error in line 12: UhRpEQRNTk A953 190,0
